--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+        //noinspection DataBindingWithoutKapt
+        dataBinding true
+    }
 }
 
 dependencies {
