Deleted API CODE pending : Register,Login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -31,7 +32,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures{
-        viewBinding true
+        viewBinding = true
         //noinspection DataBindingWithoutKapt
         dataBinding true
     }
@@ -46,6 +47,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     implementation 'com.google.android.gms:play-services-cast-framework:21.3.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -68,5 +70,21 @@ dependencies {
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation("com.google.firebase:firebase-auth-ktx")
+
+    // CameraX core library
+    implementation "androidx.camera:camera-core:1.2.3"
+
+// CameraX lifecycle library
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
+
+// CameraX view library
+    implementation "androidx.camera:camera-view:1.2.3"
+
+    //Parcelize
+    implementation "androidx.core:core-ktx:1.10.1"
+
+    // image loading 3rd party feature
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
 }
