added calendar in attendance fragment pending : Edit Profile in ProfileFragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
         //noinspection DataBindingWithoutKapt
         dataBinding true
     }
+    namespace 'com.example.eliteworks'
 
 }
 
