--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,5 @@ android.nonTransitiveRClass=true
 android.suppressUnsupportedCompileSdk=33
 
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
